fix: wrapped styles in mixin.

--- a/src/app/material/Button/_index.scss
+++ b/src/app/material/Button/_index.scss
@@ -2,41 +2,45 @@
 @use '@material/button/button';
 
 
-@include button.core-styles;
+@mixin themes {
+  @include button.core-styles;
+
+  .mdc-button {
+    @include theme.custom-ripple-transition();
+
+    &, &--outlined {
+      @include theme.background-color(text);
+    }
+
+    &--raised {
+      @include theme.background-color(card);
+      @include theme.text-color(light);
+    }
 
 
-.mdc-button {
-  @include theme.custom-ripple-transition();
+    &--icon {
+      display: inline-flex;
+      min-width: 40px;
+      min-height: 40px;
+      border-radius: 50%;
+      overflow: hidden;
 
+      .mdc-button__ripple {
+        &:before, &:after {
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
+      }
 
-  &, &--outlined {
-    @include theme.background-color(text);
-  }
-
-  &--raised {
-    @include theme.background-color(card);
-    @include theme.text-color(light);
-  }
-
-
-  &--icon {
-    display: inline-flex;
-    min-width: 40px;
-    min-height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-
-    .mdc-button__ripple {
-      &:before, &:after {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+      .mdc-button__label {
+        display: inline-flex;
       }
     }
 
-    .mdc-button__label {
-      display: inline-flex;
+    &:disabled {
+      color: var(--mdc-theme-fg-disabled-text);
     }
   }
 }
